@startuml

entity Cities{
    * id: int
    --
    * name: varchar
    * latitude: numeric
    * longitude: numeric
}
entity Sellers{
    * id: int <<generated>>
    --
    * city_id: int <<FK>>
    * name: int
    * phone: varchar <<unique>>
}
entity Buyers{
    * id: int <<generated>>
    --
    * city_id: int <<FK>>
    * name: int
    * phone: varchar <<unique>>
}
entity Ads{
    * id: int <<generated>>
    --
    * car_id: int <<FK>>
    * title: varchar
    * date: date 
}
entity Cars{
    * id: int <<generated>>
    --
    * seller_id: int <<FK>>
    * brand: varchar
    * model: varchar
    * type: varchar
    * year: int
    * price: int
}
entity Bids{
    * id: int <<generated>>
    --
    * buyer_id: int <<FK>>
    * ad_id: int <<FK>>
    * date: date
    * price: int
    * status: enum
}

Cities ||..o{ Sellers
Cities ||..o{ Buyers
Sellers ||..o{ Cars
Cars ||..o{ Ads
Ads ||..o{ Bids
Buyers ||..o{ Bids

@enduml
